# Image-analysis

./: .clang-format  .clangd  CMakeLists.txt  main.cc
common/: CMakeLists.txt  logger.cc  logger.h  main.cc  main.h
include/: version.h
windows/: CMakeLists.txt  main_window.cc  main_window.h
windows/page1/: btn_open_color_file.cc  btn_open_color_file.h  btn_open_gray_file.cc  btn_open_gray_file.h  page.cc  page.h
windows/page2/: page.cc  page.h
windows/page3/: page.cc  page.h
